# as8

./: README.md  as8.opam  dune-project
data/: clou.as8  dest.rom  dest.romB
lib/: assembler.ml  debug.ml  dune  instructions.ml  instructions_processing.ml  lexer.mll  lexing_utils.ml  parser.mll
lib/assembler/: assembling_utils.ml
lib/lexer/: dune  lexing_utils.ml
